--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
   "license": "MIT",
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.1",
+    "got": "^11.8.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.1.3",
     "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "ts-custom-error": "^3.2.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.4",
@@ -80,7 +82,10 @@
     "typescript": "^4.1.3",
     "@teamsupercell/typings-for-css-modules-loader": "^2.5.1",
     "webpack": "^5.11.0",
-    "webpack-cli": "^4.3.0"
+    "webpack-cli": "^4.3.0",
+    "rage-edit": "^1.2.0",
+    "@node-steam/vdf": "^2.2.0",
+    "platform-folders": "^0.5.4"
   },
   "repository": {
     "type": "git",
