--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
   "license": "MIT",
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.1",
+    "fp-ts": "^2.11.1",
+    "fs-extra": "^10.0.0",
     "got": "^11.8.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
