--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "prod": "rimraf dist && cross-env NODE_ENV=production webpack --progress --color",
     "test": "jest",
     "build:win": "electron-builder build --win --x64",
-    "build:mac": "electron-builder build --mac --x64"
+    "build:mac": "electron-builder build --mac --x64",
+    "lint": "eslint . --ext .ts"
   },
   "build": {
     "appId": "com.fering.the-best-tts-mod-manager-ever",
@@ -38,6 +39,8 @@
     "fp-ts": "^2.11.1",
     "fs-extra": "^10.0.0",
     "got": "^11.8.2",
+    "platform-folders": "^0.5.4",
+    "rage-edit": "^1.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.1.3",
@@ -46,6 +49,8 @@
     "ts-custom-error": "^3.2.0"
   },
   "devDependencies": {
+    "@node-steam/vdf": "^2.2.0",
+    "@teamsupercell/typings-for-css-modules-loader": "^2.5.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^12.0.0",
     "@types/jest": "^26.0.15",
@@ -54,15 +59,15 @@
     "@types/react-redux": "^7.1.7",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.6",
-    "@typescript-eslint/eslint-plugin": "^4.11.0",
-    "@typescript-eslint/parser": "^4.11.0",
+    "@typescript-eslint/eslint-plugin": "^4.30.0",
+    "@typescript-eslint/parser": "^4.30.0",
     "copy-webpack-plugin": "^7.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
     "electron": "^11.1.1",
     "electron-builder": "^22.9.1",
     "electron-reloader": "^1.2.1",
-    "eslint": "^7.16.0",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-import-resolver-webpack": "^0.13.0",
     "eslint-plugin-import": "^2.22.1",
@@ -82,12 +87,8 @@
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.3",
-    "@teamsupercell/typings-for-css-modules-loader": "^2.5.1",
     "webpack": "^5.11.0",
-    "webpack-cli": "^4.3.0",
-    "rage-edit": "^1.2.0",
-    "@node-steam/vdf": "^2.2.0",
-    "platform-folders": "^0.5.4"
+    "webpack-cli": "^4.3.0"
   },
   "repository": {
     "type": "git",
