--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/x-data-grid": "^4.0.0",
     "@reduxjs/toolkit": "^1.5.1",
     "fp-ts": "^2.11.1",
     "fs-extra": "^10.0.0",
