--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-redux": "^7.1.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "redux-thunk": "^2.3.0",
     "ts-custom-error": "^3.2.0"
   },
   "devDependencies": {
