--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "fp-ts": "^2.11.1",
     "fs-extra": "^10.0.0",
     "got": "^11.8.2",
+    "immutability-helper": "^3.1.1",
     "platform-folders": "^0.5.4",
     "rage-edit": "^1.2.0",
     "react": "^17.0.1",
